crates/derive/tests/reactive/fail/06-non-copy-struct.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
struct NonCopy {
    non_copy_field: Vec<i32>,
}

fn main() {}
